# Ray-Tracer-Graphics-Investigator

./: .gitignore  README.md
Base/: CMakeLists.txt
Base/GeometricObjects/: GeometricObject.cpp  GeometricObject.h  Sphere.cpp  Sphere.h
Base/Interface/: Application.cpp  Application.h  main.cpp
Base/Tracers/: SingleSphere.cpp  SingleSphere.h  Tracer.cpp  Tracer.h
Base/Utilities/: Constants.h  Ray.cpp  Ray.h  ShadeRec.cpp  ShadeRec.h
Base/World/: ViewPlane.cpp  ViewPlane.h  World.cpp  World.h
