CMAKE_MINIMUM_REQUIRED(VERSION 3.4)

IF (NOT_CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the type of build (Debug or Release)" FORCE)
ENDIF()

PROJECT(RAYTRACER)

SET(dot_VERSION_MAJOR 0)
SET(dot_VERSION_MINOR 1)

CONFIGURE_FILE(
	"${PROJECT_SOURCE_DIR}/Utilities/Config.h.in"
	"${PROJECT_SOURCE_DIR}/Utilities/Config.h"
)
INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}")

SET(EXECUTABLE_NAME "RayTracer")
ADD_EXECUTABLE(${EXECUTABLE_NAME} Interface/main.cpp)

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -std=c++14 -Wall")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++14 -Wall -Werror")